--- a/index.html
+++ b/index.html
@@ -75,13 +75,18 @@
     <!-- bio -->
     <div class="row">
       <!-- <div class="col-sm-12 col-md-12 col-lg-12"> -->
-      <p id="summary">
-        Hi, I am Jordynn, a full-stack web developer. I am a woman of passion who thrives off of new knowledge and
-        seeks to be successful in all aspects of life. Due to my background in arts, fitness, and communications, my
-        talents and skills cover a myriad of categories; which marries front-end development eloquently. Exceling at
-        front-end UI, meshing colors, themes, and design, I am confident in bringing a new, fresh perspective to
-        application interface.
-      </p>
+      <div class="col-lg-8 col-md-12">
+        <p id="summary">
+          Hi, I am Jordynn, a full-stack web developer. I am a woman of passion who thrives off of new knowledge and
+          seeks to be successful in all aspects of life. Due to my background in arts, fitness, and communications, my
+          talents and skills cover a myriad of categories; which marries front-end development eloquently. Exceling at
+          front-end UI, meshing colors, themes, and design, I am confident in bringing a new, fresh perspective to
+          application interface.
+        </p>
+      </div>
+      <div class="col-lg-4 col-md-12">
+        <img class="headshot" src="images/Jordyn24389_edit-2.jpg">
+      </div>
     </div>
     <!-- </div> -->
     <!-- <div class="row"> -->
@@ -154,6 +159,9 @@
     </div>
   </div>
 
+  <!-- MAYBE ADD PARRALAX HERE
+  <div class="parallax"></div> -->
+
   <!-- skills -->
   <h3 id="skills">
     Skills
@@ -175,15 +183,15 @@
       </div>
 
       <div class="col-md-2 col-xs-6">
-          <!-- <i class="fab fa-bootstrap"></i> -->
+        <!-- <i class="fab fa-bootstrap"></i> -->
         <span class="glyphicon glyphicon-bold" style="font-size:50px" id="contacticon"></span>
         <br>
         <p class="contacttext">Bootstrap</p>
       </div>
 
       <div class="col-md-2 col-xs-6">
-          <!-- <i class="fab fa-js-square"></i> -->
-          <i class="fab fa-js-square" style="font-size:60px" id="contacticon"></i>
+        <!-- <i class="fab fa-js-square"></i> -->
+        <i class="fab fa-js-square" style="font-size:60px" id="contacticon"></i>
         <br>
         <p class="contacttext">Javascript</p>
       </div>
