added project cards

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
     <div class="row" id="projectcards">
       <!-- <div class="col-6"> -->
       <div class="card-group">
+        <!-- Ballads and brews -->
         <div class="card">
           <div class="zoom">
             <a href="https://buley004.github.io/ballads-and-brews/">
@@ -123,22 +124,58 @@
             <a href="https://github.com/buley004/ballads-and-brews" class="btn btn-primary" id="cardbutton">Github</a>
           </div>
         </div>
+        <!-- Divvy -->
         <div class="card">
           <div class="zoom">
-            <a href="https://vast-gorge-37663.herokuapp.com">
+            <a href="https://divvy-application.herokuapp.com">
               <img class="card-img-top" src="images/Screen Shot 2019-06-24 at 12.11.29 PM.png" alt="Image of app"></a>
             </a>
           </div>
           <div class="card-body">
             <h5 class="card-title">Divvy</h5>
             <p class="card-text">Household bill splitting app.</p>
-            <p class="card-text">Uses HTML, CSS, bootstrap, jQuery, sequelize/MSQL, and API
+            <p class="card-text">Uses HTML, CSS, bootstrap, jQuery, sequelize/MSQL, express and API
               documentation.</p>
           </div>
           <div class="card-footer">
             <a href="https://github.com/jottobot/Divvy" class="btn btn-primary" id="cardbutton">Github</a>
           </div>
         </div>
+        <!-- Project 3 -->
+        <div class="card">
+          <div class="zoom">
+            <a href="#">
+              <img class="card-img-top" src="#" alt="Image of app"></a>
+            </a>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">THIS WILL BE ANOTHER PROJECT</h5>
+            <p class="card-text">...</p>
+            <p class="card-text">...</p>
+          </div>
+          <div class="card-footer">
+            <a href="https://github.com/jottobot/Divvy" class="btn btn-primary" id="cardbutton">Github</a>
+          </div>
+        </div>
+      </div>
+      <div class="card-group">
+        <!-- Friend Finder -->
+        <div class="card">
+          <div class="zoom">
+            <a href="#">
+              <img class="card-img-top" src="#" alt="Image of app"></a>
+            </a>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">THIS WILL BE ANOTHER PROJECT</h5>
+            <p class="card-text">...</p>
+            <p class="card-text">...</p>
+          </div>
+          <div class="card-footer">
+            <a href="https://github.com/jottobot/Divvy" class="btn btn-primary" id="cardbutton">Github</a>
+          </div>
+        </div>
+        <!-- Clicky Game -->
         <div class="card">
           <div class="zoom">
             <a href="#">
