added target blank

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <!-- Ballads and brews -->
         <div class="card">
           <div class="zoom">
-            <a href="https://buley004.github.io/ballads-and-brews/">
+            <a href="https://buley004.github.io/ballads-and-brews/" target="_blank">
               <img class="card-img-top" src="images/Screen Shot 2019-06-24 at 12.11.57 PM.png" alt="Image of app">
             </a>
           </div>
@@ -121,13 +121,13 @@
               and API documentation.</p>
           </div>
           <div class="card-footer">
-            <a href="https://github.com/buley004/ballads-and-brews" class="btn btn-primary" id="cardbutton">Github</a>
+            <a href="https://github.com/buley004/ballads-and-brews/" target="_blank" class="btn btn-primary" id="cardbutton">Github</a>
           </div>
         </div>
         <!-- Divvy -->
         <div class="card">
           <div class="zoom">
-            <a href="https://divvy-application.herokuapp.com">
+            <a href="https://divvy-application.herokuapp.com" target="_blank">
               <img class="card-img-top" src="images/Screen Shot 2019-06-24 at 12.11.29 PM.png" alt="Image of app"></a>
             </a>
           </div>
@@ -138,13 +138,13 @@
               documentation.</p>
           </div>
           <div class="card-footer">
-            <a href="https://github.com/jottobot/Divvy" class="btn btn-primary" id="cardbutton">Github</a>
+            <a href="https://github.com/jottobot/Divvy" class="btn btn-primary" id="cardbutton" target="_blank">Github</a>
           </div>
         </div>
         <!-- Project 3 -->
         <div class="card">
           <div class="zoom">
-            <a href="#">
+            <a href="#" target="_blank">
               <img class="card-img-top" src="#" alt="Image of app"></a>
             </a>
           </div>
@@ -154,7 +154,7 @@
             <p class="card-text">...</p>
           </div>
           <div class="card-footer">
-            <a href="https://github.com/jottobot/Divvy" class="btn btn-primary" id="cardbutton">Github</a>
+            <a href="https://github.com/jottobot/Divvy" class="btn btn-primary" id="cardbutton" target="_blank">Github</a>
           </div>
         </div>
       </div>
@@ -172,13 +172,13 @@
             <p class="card-text">...</p>
           </div>
           <div class="card-footer">
-            <a href="https://github.com/jottobot/Divvy" class="btn btn-primary" id="cardbutton">Github</a>
+            <a href="https://github.com/jottobot/Divvy" class="btn btn-primary" id="cardbutton" target="_blank">Github</a>
           </div>
         </div>
         <!-- Clicky Game -->
         <div class="card">
           <div class="zoom">
-            <a href="#">
+            <a href="#" target="_blank">
               <img class="card-img-top" src="#" alt="Image of app"></a>
             </a>
           </div>
@@ -188,7 +188,7 @@
             <p class="card-text">...</p>
           </div>
           <div class="card-footer">
-            <a href="https://github.com/jottobot/Divvy" class="btn btn-primary" id="cardbutton">Github</a>
+            <a href="https://github.com/jottobot/Divvy" class="btn btn-primary" id="cardbutton" target="_blank">Github</a>
           </div>
         </div>
       </div>
@@ -345,19 +345,19 @@
         <div class="col-md-4 col-xs-3">
           <i class='fab fa-linkedin' style="font-size:48px" id="contacticon"></i>
           <br>
-          <a href="https://www.linkedin.com/in/jordynn-otto-861918173/" id="contactlink">Linkedin</a>
+          <a href="https://www.linkedin.com/in/jordynn-otto-861918173/" id="contactlink" target="_blank">Linkedin</a>
         </div>
 
         <div class="col-md-4 col-xs-3">
           <i class='fab fa-github' style="font-size:48px" id="contacticon"></i>
           <br>
-          <a href="https://github.com/jottobot" id="contactlink">Github</a>
+          <a href="https://github.com/jottobot" id="contactlink" target="_blank">Github</a>
         </div>
 
         <div class="col-md-4 col-xs-3">
           <i class="fa fa-file-text" style="font-size:48px" id="contacticon"></i>
           <br>
-          <a href="assets/Jordynn Otto Resume.pdf" id="contactlink">Resume</a>
+          <a href="assets/Jordynn Otto Resume.pdf" id="contactlink" target="_blank">Resume</a>
         </div>
       </div>
 
