adding more projects

--- a/index.html
+++ b/index.html
@@ -117,11 +117,12 @@
           <div class="card-body">
             <h5 class="card-title">Ballads and Brews</h5>
             <p class="card-text">App populates concerts and restaurants near you NOW!</p>
-            <p class="card-text">Uses HTML, CSS, bootstrap, jQuery,
+            <p class="card-text">Uses HTML, CSS, Bootstrap, jQuery,
               and API documentation.</p>
           </div>
           <div class="card-footer">
-            <a href="https://github.com/buley004/ballads-and-brews/" target="_blank" class="btn btn-primary" id="cardbutton">Github</a>
+            <a href="https://github.com/buley004/ballads-and-brews/" target="_blank" class="btn btn-primary"
+              id="cardbutton">Github</a>
           </div>
         </div>
         <!-- Divvy -->
@@ -134,11 +135,12 @@
           <div class="card-body">
             <h5 class="card-title">Divvy</h5>
             <p class="card-text">Household bill splitting app.</p>
-            <p class="card-text">Uses HTML, CSS, bootstrap, jQuery, sequelize/MSQL, express and API
+            <p class="card-text">Uses HTML, CSS, Bootstrap, jQuery, Sequelize/MSQL, Express and API
               documentation.</p>
           </div>
           <div class="card-footer">
-            <a href="https://github.com/jottobot/Divvy" class="btn btn-primary" id="cardbutton" target="_blank">Github</a>
+            <a href="https://github.com/jottobot/Divvy" class="btn btn-primary" id="cardbutton"
+              target="_blank">Github</a>
           </div>
         </div>
         <!-- Project 3 -->
@@ -149,30 +151,52 @@
             </a>
           </div>
           <div class="card-body">
-            <h5 class="card-title">THIS WILL BE ANOTHER PROJECT</h5>
-            <p class="card-text">...</p>
-            <p class="card-text">...</p>
+            <h5 class="card-title">CoLab</h5>
+            <p class="card-text">Artist collaboration is now easy.</p>
+            <p class="card-text">Uses HTML, CSS, Bootstrap, jQuery, MongoDB, Express, Google authorization and API
+              documentation. </p>
           </div>
           <div class="card-footer">
-            <a href="https://github.com/jottobot/Divvy" class="btn btn-primary" id="cardbutton" target="_blank">Github</a>
+            <a href="https://github.com/jottobot/Divvy" class="btn btn-primary" id="cardbutton"
+              target="_blank">Github</a>
           </div>
         </div>
       </div>
+    </div>
+    <div class="row" id="projectcards2">
       <div class="card-group">
         <!-- Friend Finder -->
         <div class="card">
           <div class="zoom">
-            <a href="#">
+            <a href="https://peaceful-tundra-44887.herokuapp.com/" target="_blank">
+              <img class="card-img-top" src="images/Screen Shot 2019-07-15 at 2.04.53 PM.png" alt="Image of app"></a>
+            </a>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Friend Finder</h5>
+            <p class="card-text">This app helps to find a friend with your same interests.</p>
+            <p class="card-text">Uses HTML, Bootstrap, CSS, Javascript, Express, Node JS.</p>
+          </div>
+          <div class="card-footer">
+            <a href="https://github.com/jottobot/FriendFinder" class="btn btn-primary" id="cardbutton"
+              target="_blank">Github</a>
+          </div>
+        </div>
+        <!-- Mongo Scraper -->
+        <div class="card">
+          <div class="zoom">
+            <a href="#" target="_blank">
               <img class="card-img-top" src="#" alt="Image of app"></a>
             </a>
           </div>
           <div class="card-body">
-            <h5 class="card-title">THIS WILL BE ANOTHER PROJECT</h5>
-            <p class="card-text">...</p>
-            <p class="card-text">...</p>
+            <h5 class="card-title">Women's Health Article Scraper</h5>
+            <p class="card-text">Site to provide the user with articles about beauty.</p>
+            <p class="card-text">Uses HTML, Bootstrap, CSS, Javascript, MongoDB.</p>
           </div>
           <div class="card-footer">
-            <a href="https://github.com/jottobot/Divvy" class="btn btn-primary" id="cardbutton" target="_blank">Github</a>
+            <a href="https://github.com/jottobot/Scraper" class="btn btn-primary" id="cardbutton"
+              target="_blank">Github</a>
           </div>
         </div>
         <!-- Clicky Game -->
@@ -183,17 +207,19 @@
             </a>
           </div>
           <div class="card-body">
-            <h5 class="card-title">THIS WILL BE ANOTHER PROJECT</h5>
-            <p class="card-text">...</p>
-            <p class="card-text">...</p>
+            <h5 class="card-title">React Clicky Game</h5>
+            <p class="card-text">Memory game using React JS.</p>
+            <p class="card-text">Uses HTML, Bootstrap, CSS, React</p>
           </div>
           <div class="card-footer">
-            <a href="https://github.com/jottobot/Divvy" class="btn btn-primary" id="cardbutton" target="_blank">Github</a>
+            <a href="https://github.com/jottobot/Candy-Clicky-Game" class="btn btn-primary" id="cardbutton"
+              target="_blank">Github</a>
           </div>
         </div>
       </div>
-      <!-- </div> -->
     </div>
+    <!-- </div> -->
+  </div>
   </div>
 
   <!-- MAYBE ADD PARRALAX HERE
@@ -312,8 +338,6 @@
     </div>
 
   </div>
-
-
 
   <!-- contact page -->
   <div id="contactPage">
