--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
               target="_blank">Github</a>
           </div>
         </div>
-        <!-- Project 3 -->
+        <!-- CoLab -->
         <div class="card">
           <div class="zoom">
             <a href="#" target="_blank">
@@ -152,12 +152,12 @@
           </div>
           <div class="card-body">
             <h5 class="card-title">CoLab</h5>
-            <p class="card-text">Artist collaboration is now easy.</p>
-            <p class="card-text">Uses HTML, CSS, Bootstrap, jQuery, MongoDB, Express, Google authorization and API
+            <p class="card-text">Finding a fellow artist to collaborate with is now easy.</p>
+            <p class="card-text">Uses HTML, CSS, Bootstrap, jQuery, MongoDB, React, Express, Google authorization and API
               documentation. </p>
           </div>
           <div class="card-footer">
-            <a href="https://github.com/jottobot/Divvy" class="btn btn-primary" id="cardbutton"
+            <a href=https://github.com/zenwattage/CoLab class="btn btn-primary" id="cardbutton"
               target="_blank">Github</a>
           </div>
         </div>
@@ -174,7 +174,7 @@
           </div>
           <div class="card-body">
             <h5 class="card-title">Friend Finder</h5>
-            <p class="card-text">This app helps to find a friend with your same interests.</p>
+            <p class="card-text">Take a fun quiz to find a new best friend with your same interests!.</p>
             <p class="card-text">Uses HTML, Bootstrap, CSS, Javascript, Express, Node JS.</p>
           </div>
           <div class="card-footer">
@@ -185,8 +185,8 @@
         <!-- Mongo Scraper -->
         <div class="card">
           <div class="zoom">
-            <a href="#" target="_blank">
-              <img class="card-img-top" src="#" alt="Image of app"></a>
+            <a href="https://arctic-backbacon-25416.herokuapp.com/" target="_blank">
+              <img class="card-img-top" src="./images/Screen Shot 2019-07-29 at 11.49.45 AM.png" alt="Image of app"></a>
             </a>
           </div>
           <div class="card-body">
@@ -202,7 +202,7 @@
         <!-- Clicky Game -->
         <div class="card">
           <div class="zoom">
-            <a href="#" target="_blank">
+            <a href="https://jottobot.github.io/Clicky-Game/" target="_blank">
               <img class="card-img-top" src="#" alt="Image of app"></a>
             </a>
           </div>
@@ -232,7 +232,7 @@
 
   <center>
     <div class="row" id="skillsrowone">
-      <div class="col-md-2 col-xs-0"></div>
+      <div class="col-md-1 col-xs-0"></div>
       <div class="col-md-2 col-xs-6">
         <i class='fas fa-code' style="font-size:50px" id="contacticon"></i>
         <br>
@@ -258,27 +258,42 @@
         <br>
         <p class="contacttext">Javascript</p>
       </div>
-      <div class="col-md-2 col-xs-0"></div>
-    </div>
 
-    <div class="row" id="skillsrow">
-      <div class="col-md-1 col-xs-0"></div>
       <div class="col-md-2 col-xs-6">
         <i class="fa fa-phone" style="font-size:50px" id="contacticon"></i>
         <br>
         <p class="contacttext">APIs</p>
       </div>
 
+      <div class="col-md-1 col-xs-0"></div>
+
+
+    </div>
+
+    <div class="row" id="skillsrow">
+      <div class="col-md-1 col-xs-0"></div>
       <div class="col-md-2 col-xs-6">
-        <i class='fas fa-database' style="font-size:50px" id="contacticon"></i>
+        <i class="fas fa-database" style="font-size:50px" id="contacticon"></i>
         <br>
-        <p class="contacttext">mySQL</p>
+        <p class="contacttext">MongoDB</p>
+      </div>
+
+      <div class="col-md-2 col-xs-6">
+        <i class="fas fa-table" style="font-size:50px" id="contacticon"></i>
+        <br>
+        <p class="contacttext">mySQL/Sequelize</p>
       </div>
 
       <div class="col-md-2 col-xs-6">
         <i class="fab fa-node-js" style="font-size:60px" id="contacticon"></i>
         <br>
-        <p class="contacttext">nodeJS</p>
+        <p class="contacttext">nodeJS/Express</p>
+      </div>
+
+      <div class="col-md-2 col-xs-6">
+        <i class="fab fa-react" style="font-size:50px" id="contacticon"></i>
+        <br>
+        <p class="contacttext">React</p>
       </div>
 
       <div class="col-md-2 col-xs-6">
@@ -286,7 +301,8 @@
         <br>
         <p class="contacttext">Photoshop</p>
       </div>
-      <div class="col-md-2"></div>
+
+      <div class="col-md-1"></div>
     </div>
   </center>
   <!-- end of web portfolio div -->
@@ -381,7 +397,7 @@
         <div class="col-md-4 col-xs-3">
           <i class="fa fa-file-text" style="font-size:48px" id="contacticon"></i>
           <br>
-          <a href="assets/Jordynn Otto Resume.pdf" id="contactlink" target="_blank">Resume</a>
+          <a href="assets/JordynnOttoResume.pdf" id="contactlink" target="_blank">Resume</a>
         </div>
       </div>
 
