--- a/index.html
+++ b/index.html
@@ -202,17 +202,17 @@
         <!-- Clicky Game -->
         <div class="card">
           <div class="zoom">
-            <a href="https://jottobot.github.io/Clicky-Game/" target="_blank">
-              <img class="card-img-top" src="#" alt="Image of app"></a>
+            <a href="https://serene-caverns-70267.herokuapp.com/" target="_blank">
+              <img class="card-img-top" src="./images/Screen Shot 2019-07-31 at 6.29.41 PM.png" alt="Image of app"></a>
             </a>
           </div>
           <div class="card-body">
-            <h5 class="card-title">React Clicky Game</h5>
-            <p class="card-text">Memory game using React JS.</p>
-            <p class="card-text">Uses HTML, Bootstrap, CSS, React</p>
+            <h5 class="card-title">React Google Books</h5>
+            <p class="card-text">Search for and save books from the Google Books API.</p>
+            <p class="card-text">Uses HTML, Bootstrap, CSS, Express, MongoDB, React</p>
           </div>
           <div class="card-footer">
-            <a href="https://github.com/jottobot/Candy-Clicky-Game" class="btn btn-primary" id="cardbutton"
+            <a href="https://github.com/jottobot/Google-Books" class="btn btn-primary" id="cardbutton"
               target="_blank">Github</a>
           </div>
         </div>
@@ -221,9 +221,6 @@
     <!-- </div> -->
   </div>
   </div>
-
-  <!-- MAYBE ADD PARRALAX HERE
-  <div class="parallax"></div> -->
 
   <!-- skills -->
   <h3 id="skills">
