--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <div class="card-body">
             <h5 class="card-title">Divvy</h5>
             <p class="card-text">Household bill splitting app.</p>
-            <p class="card-text">Uses HTML, CSS, Bootstrap, jQuery, Sequelize/MSQL, Express and API
+            <p class="card-text">Uses HTML, CSS, Bootstrap, jQuery, Sequelize/MySQL, Express and API
               documentation.</p>
           </div>
           <div class="card-footer">
@@ -153,11 +153,11 @@
           <div class="card-body">
             <h5 class="card-title">CoLab</h5>
             <p class="card-text">Finding a fellow artist to collaborate with is now easy.</p>
-            <p class="card-text">Uses HTML, CSS, Bootstrap, jQuery, MongoDB, React, Express, Google authorization and API
+            <p class="card-text">Uses HTML, CSS, Bootstrap, jQuery, MongoDB/Mongoose, React, Express, Google authorization and API
               documentation. </p>
           </div>
           <div class="card-footer">
-            <a href=https://github.com/zenwattage/CoLab class="btn btn-primary" id="cardbutton"
+            <a href="https://github.com/zenwattage/CoLab" class="btn btn-primary" id="cardbutton"
               target="_blank">Github</a>
           </div>
         </div>
@@ -174,7 +174,7 @@
           </div>
           <div class="card-body">
             <h5 class="card-title">Friend Finder</h5>
-            <p class="card-text">Take a fun quiz to find a new best friend with your same interests!.</p>
+            <p class="card-text">Take a fun quiz to find a new best friend with your same interests!</p>
             <p class="card-text">Uses HTML, Bootstrap, CSS, Javascript, Express, Node JS.</p>
           </div>
           <div class="card-footer">
@@ -192,7 +192,7 @@
           <div class="card-body">
             <h5 class="card-title">Women's Health Article Scraper</h5>
             <p class="card-text">Site to provide the user with articles about beauty.</p>
-            <p class="card-text">Uses HTML, Bootstrap, CSS, Javascript, MongoDB.</p>
+            <p class="card-text">Uses HTML, Bootstrap, CSS, Javascript, MongoDB/Mongoose.</p>
           </div>
           <div class="card-footer">
             <a href="https://github.com/jottobot/Scraper" class="btn btn-primary" id="cardbutton"
@@ -209,7 +209,7 @@
           <div class="card-body">
             <h5 class="card-title">React Google Books</h5>
             <p class="card-text">Search for and save books from the Google Books API.</p>
-            <p class="card-text">Uses HTML, Bootstrap, CSS, Express, MongoDB, React</p>
+            <p class="card-text">Uses HTML, Bootstrap, CSS, Express, MongoDB/Mongoose, React</p>
           </div>
           <div class="card-footer">
             <a href="https://github.com/jottobot/Google-Books" class="btn btn-primary" id="cardbutton"
@@ -272,7 +272,7 @@
       <div class="col-md-2 col-xs-6">
         <i class="fas fa-database" style="font-size:50px" id="contacticon"></i>
         <br>
-        <p class="contacttext">MongoDB</p>
+        <p class="contacttext">MongoDB/Mongoose</p>
       </div>
 
       <div class="col-md-2 col-xs-6">
