--- a/index.html
+++ b/index.html
@@ -77,11 +77,9 @@
       <!-- <div class="col-sm-12 col-md-12 col-lg-12"> -->
       <div class="col-lg-8 col-md-12">
         <p id="summary">
-          Hi, I am Jordynn, a full-stack web developer. I am a woman of passion who thrives off of new knowledge and
-          seeks to be successful in all aspects of life. Due to my background in arts, fitness, and communications, my
-          talents and skills cover a myriad of categories; which marries front-end development eloquently. Exceling at
-          front-end UI, meshing colors, themes, and design, I am confident in bringing a new, fresh perspective to
-          application interface.
+          I am Jordynn, a full-stack web developer with talents highlighted in front-end development. A woman of passion thriving off of both new knowledge and
+          success in known ventures, I blindly dove into software engineering after a victorius career in arts and fitness in Los Angeles. Combining development tools and artistic skills, I am confident in being an irreplacable team member to any front-end development team. I take pride in satisfying client's wants, eloquent UI design, and communcation with non-developers and developers alike. I will bring a new, fresh perspective to
+          application interface to not only make UI an experience, but overall a full cohesive journey.
         </p>
       </div>
       <div class="col-lg-4 col-md-12">
@@ -202,17 +200,17 @@
         <!-- Clicky Game -->
         <div class="card">
           <div class="zoom">
-            <a href="https://serene-caverns-70267.herokuapp.com/" target="_blank">
-              <img class="card-img-top" src="./images/Screen Shot 2019-07-31 at 6.29.41 PM.png" alt="Image of app"></a>
+            <a href="https://jottobot.github.io/Clicky-Game/" target="_blank">
+              <img class="card-img-top" src="./images/Screen Shot 2019-09-03 at 5.32.58 PM.png" alt="Image of app"></a>
             </a>
           </div>
           <div class="card-body">
-            <h5 class="card-title">React Google Books</h5>
-            <p class="card-text">Search for and save books from the Google Books API.</p>
-            <p class="card-text">Uses HTML, Bootstrap, CSS, Express, MongoDB/Mongoose, React</p>
+            <h5 class="card-title">React Clicky Game</h5>
+            <p class="card-text">Click and memorize candy to get high score.</p>
+            <p class="card-text">Uses HTML, Bootstrap, CSS, Node JS, React JS.</p>
           </div>
           <div class="card-footer">
-            <a href="https://github.com/jottobot/Google-Books" class="btn btn-primary" id="cardbutton"
+            <a href="https://github.com/jottobot/Clicky-Game" class="btn btn-primary" id="cardbutton"
               target="_blank">Github</a>
           </div>
         </div>
@@ -394,7 +392,7 @@
         <div class="col-md-4 col-xs-3">
           <i class="fa fa-file-text" style="font-size:48px" id="contacticon"></i>
           <br>
-          <a href="assets/JordynnOttoResume.pdf" id="contactlink" target="_blank">Resume</a>
+          <a href="assets/Jordynn Otto Resume.pdf" id="contactlink" target="_blank">Resume</a>
         </div>
       </div>
 
