--- a/index.html
+++ b/index.html
@@ -77,8 +77,13 @@
       <!-- <div class="col-sm-12 col-md-12 col-lg-12"> -->
       <div class="col-lg-8 col-md-12">
         <p id="summary">
-          I am Jordynn, a full-stack web developer with talents highlighted in front-end development. A woman of passion thriving off of both new knowledge and
-          success in known ventures, I blindly dove into software engineering after a victorius career in arts and fitness in Los Angeles. Combining development tools and artistic skills, I am confident in being an irreplacable team member to any front-end development team. I take pride in satisfying client's wants, eloquent UI design, and communcation with non-developers and developers alike. I will bring a new, fresh perspective to
+          I am Jordynn, a full-stack web developer with talents highlighted in front-end development. A woman of passion
+          thriving off of both new knowledge and
+          success in known ventures, I blindly dove into software engineering after a victorius career in arts and
+          fitness in Los Angeles. Combining development tools and artistic skills, I am confident in being an
+          irreplacable team member to any front-end development team. I take pride in satisfying client's wants,
+          eloquent UI design, and communcation with non-developers and developers alike. I will bring a new, fresh
+          perspective to
           application interface to not only make UI an experience, but overall a full cohesive journey.
         </p>
       </div>
@@ -86,13 +91,6 @@
         <img class="headshot" src="images/Jordyn24389_edit-2.jpg">
       </div>
     </div>
-    <!-- </div> -->
-    <!-- <div class="row"> -->
-    <!-- <div class="col-sm-12 col-md-12 col-lg-12"> -->
-    <!-- <p id="summary">   -->
-    <!-- </p> -->
-    <!-- </div> -->
-    <!-- </div> -->
   </div>
 
   <!-- web portfolio/skills -->
@@ -142,7 +140,7 @@
           </div>
         </div>
         <!-- CoLab -->
-        <div class="card">
+        <!-- <div class="card">
           <div class="zoom">
             <a href="#" target="_blank">
               <img class="card-img-top" src="#" alt="Image of app"></a>
@@ -151,14 +149,15 @@
           <div class="card-body">
             <h5 class="card-title">CoLab</h5>
             <p class="card-text">Finding a fellow artist to collaborate with is now easy.</p>
-            <p class="card-text">Uses HTML, CSS, Bootstrap, jQuery, MongoDB/Mongoose, React, Express, Google authorization and API
+            <p class="card-text">Uses HTML, CSS, Bootstrap, jQuery, MongoDB/Mongoose, React, Express, Google
+              authorization and API
               documentation. </p>
           </div>
           <div class="card-footer">
             <a href="https://github.com/zenwattage/CoLab" class="btn btn-primary" id="cardbutton"
               target="_blank">Github</a>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
     <div class="row" id="projectcards2">
@@ -226,79 +225,80 @@
   </h3>
 
   <center>
-    <div class="row" id="skillsrowone">
-      <div class="col-md-1 col-xs-0"></div>
-      <div class="col-md-2 col-xs-6">
-        <i class='fas fa-code' style="font-size:50px" id="contacticon"></i>
-        <br>
-        <p class="contacttext">HTML</p>
+    <div class="container">
+      <div class="row" id="skillsrowone">
+        <div class="col-md-1 col-xs-0"></div>
+        <div class="col-md-2 col-xs-6">
+          <i class='fas fa-code' style="font-size:50px" id="contacticon"></i>
+          <br>
+          <p class="contacttext">HTML</p>
+        </div>
+
+        <div class="col-md-2 col-xs-6">
+          <i class='fab fa-css3' style="font-size:50px" id="contacticon"></i>
+          <br>
+          <p class="contacttext">CSS</p>
+        </div>
+
+        <div class="col-md-2 col-xs-6">
+          <!-- <i class="fab fa-bootstrap"></i> -->
+          <span class="glyphicon glyphicon-bold" style="font-size:50px" id="contacticon"></span>
+          <br>
+          <p class="contacttext">Bootstrap</p>
+        </div>
+
+        <div class="col-md-2 col-xs-6">
+          <!-- <i class="fab fa-js-square"></i> -->
+          <i class="fab fa-js-square" style="font-size:60px" id="contacticon"></i>
+          <br>
+          <p class="contacttext">Javascript</p>
+        </div>
+
+        <div class="col-md-2 col-xs-6">
+          <i class="fa fa-phone" style="font-size:50px" id="contacticon"></i>
+          <br>
+          <p class="contacttext">APIs</p>
+        </div>
+
+        <div class="col-md-1 col-xs-0"></div>
+
       </div>
-
-      <div class="col-md-2 col-xs-6">
-        <i class='fab fa-css3' style="font-size:50px" id="contacticon"></i>
-        <br>
-        <p class="contacttext">CSS</p>
-      </div>
-
-      <div class="col-md-2 col-xs-6">
-        <!-- <i class="fab fa-bootstrap"></i> -->
-        <span class="glyphicon glyphicon-bold" style="font-size:50px" id="contacticon"></span>
-        <br>
-        <p class="contacttext">Bootstrap</p>
-      </div>
-
-      <div class="col-md-2 col-xs-6">
-        <!-- <i class="fab fa-js-square"></i> -->
-        <i class="fab fa-js-square" style="font-size:60px" id="contacticon"></i>
-        <br>
-        <p class="contacttext">Javascript</p>
-      </div>
-
-      <div class="col-md-2 col-xs-6">
-        <i class="fa fa-phone" style="font-size:50px" id="contacticon"></i>
-        <br>
-        <p class="contacttext">APIs</p>
-      </div>
-
-      <div class="col-md-1 col-xs-0"></div>
-
-
     </div>
 
-    <div class="row" id="skillsrow">
-      <div class="col-md-1 col-xs-0"></div>
-      <div class="col-md-2 col-xs-6">
-        <i class="fas fa-database" style="font-size:50px" id="contacticon"></i>
-        <br>
-        <p class="contacttext">MongoDB/Mongoose</p>
-      </div>
+      <div class="row" id="skillsrow">
+        <div class="col-md-1 col-xs-0"></div>
+        <div class="col-md-2 col-xs-6">
+          <i class="fas fa-database" style="font-size:50px" id="contacticon"></i>
+          <br>
+          <p class="contacttext">MongoDB/Mongoose</p>
+        </div>
 
-      <div class="col-md-2 col-xs-6">
-        <i class="fas fa-table" style="font-size:50px" id="contacticon"></i>
-        <br>
-        <p class="contacttext">mySQL/Sequelize</p>
-      </div>
+        <div class="col-md-2 col-xs-6">
+          <i class="fas fa-table" style="font-size:50px" id="contacticon"></i>
+          <br>
+          <p class="contacttext">mySQL/Sequelize</p>
+        </div>
 
-      <div class="col-md-2 col-xs-6">
-        <i class="fab fa-node-js" style="font-size:60px" id="contacticon"></i>
-        <br>
-        <p class="contacttext">nodeJS/Express</p>
-      </div>
+        <div class="col-md-2 col-xs-6">
+          <i class="fab fa-node-js" style="font-size:60px" id="contacticon"></i>
+          <br>
+          <p class="contacttext">nodeJS/Express</p>
+        </div>
 
-      <div class="col-md-2 col-xs-6">
-        <i class="fab fa-react" style="font-size:50px" id="contacticon"></i>
-        <br>
-        <p class="contacttext">React</p>
-      </div>
+        <div class="col-md-2 col-xs-6">
+          <i class="fab fa-react" style="font-size:50px" id="contacticon"></i>
+          <br>
+          <p class="contacttext">React</p>
+        </div>
 
-      <div class="col-md-2 col-xs-6">
-        <i class="fa fa-camera" style="font-size:50px" id="contacticon"></i>
-        <br>
-        <p class="contacttext">Photoshop</p>
-      </div>
+        <div class="col-md-2 col-xs-6">
+          <i class="fa fa-camera" style="font-size:50px" id="contacticon"></i>
+          <br>
+          <p class="contacttext">Photoshop</p>
+        </div>
 
-      <div class="col-md-1"></div>
-    </div>
+        <div class="col-md-1"></div>
+      </div>
   </center>
   <!-- end of web portfolio div -->
   </div>
